# llm-prompting-experiments

./: .gitignore  README.md  dag_prompting.ipynb  llm_pipeline_eval.ipynb  minigrid_prompt.txt  pyproject.toml  requirements.txt
.ipynb_checkpoints/: llm_pipeline_eval-checkpoint.ipynb
lgts/: choose_model_client.py  dag_processor.py  main.py  validator.py
lgts_output/: dag_47141320.json  dag_f22c3780.json  paths_0c30f9dd.json  paths_ad326bef.json  paths_b33bc81a.json  paths_d1146c23.json
master_agent/llm/: __init__.py
src/: __init__.py  choose_model_client.py  dag_processor.py  deepseek_client.py  main.py  validator.py
