[project]
name = "lgts"
version = "0.1.0"
description = "LLM pipeline for dynamic minigrid task sampling, generates 2D DAG lists"
readme = "README.md"
authors = [
  { name="UCF Team L15", email="st558679@ucf.edu" }
]

requires-python = ">=3.9"

# Dependencies can be listed here or left to your requirements.txt
dependencies = [
  "requests",
  "openai",
  "python-dotenv",
]

[project.scripts]
lgts-run = "lgts.main:run_lgts_pipeline"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lgts"]